--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
     "browserify": "^14.0.0",
+    "draft-js": "^0.10.0",
     "express": "^4.14.1",
     "gulp": "^3.9.1",
     "history": "^4.5.1",
