--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.16.0",
     "browserify": "^14.0.0",
     "draft-js": "^0.10.0",
+    "draft-js-export-html": "^0.5.2",
     "express": "^4.14.1",
     "gulp": "^3.9.1",
     "history": "^4.5.1",
