--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.14.1",
     "gulp": "^3.9.1",
     "history": "^4.5.1",
+    "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.22",
