--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
   },
   "homepage": "https://github.com/eessex/events-list#readme",
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
-    "browserify": "^14.0.0",
     "draft-js": "^0.10.0",
     "express": "^4.14.1",
     "gulp": "^3.9.1",
@@ -38,10 +35,20 @@
     "react-router": "^3.0.2",
     "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2"
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "node-sass": "^4.5.0",
+    "react-hot-loader": "^1.3.1",
+    "sass-loader": "^6.0.1",
+    "style-loader": "^0.13.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
