--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webapp.js",
   "scripts": {
     "test": "test",
-    "start": "node webapp.js"
+    "start": "node webapp.js",
+    "postinstall": "node ./server/deploy.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,10 @@
     "body-parser": "^1.16.0",
     "draft-js": "^0.10.0",
     "express": "^4.14.1",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "history": "^4.5.1",
+    "http-proxy": "^1.16.2",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.22",
