--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "react app on mern stack for listing events",
   "main": "webapp.js",
   "scripts": {
-    "test": "test",
     "start": "node webapp.js",
     "postinstall": "node ./server/deploy.js"
   },
@@ -22,10 +21,16 @@
   },
   "homepage": "https://github.com/eessex/events-list#readme",
   "dependencies": {
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
+    "css-loader": "^0.26.1",
+    "dotenv": "^4.0.0",
     "draft-js": "^0.10.0",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "history": "^4.5.1",
@@ -33,25 +38,21 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.22",
+    "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "underscore": "^1.8.3",
-    "underscore.string": "^3.3.4",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
-    "css-loader": "^0.26.1",
-    "node-sass": "^4.5.0",
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.3.4",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.23.1",
+    "node-env-file": "^0.1.8",
     "react-hot-loader": "^1.3.1",
     "webpack-dev-server": "^2.4.1"
   }
