--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.23.1",
+    "html-webpack-plugin": "^2.28.0",
     "node-env-file": "^0.1.8",
     "react-hot-loader": "^1.3.1",
     "webpack-dev-server": "^2.4.1"
