--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 npm-debug.log
 static/tmp*
 .DS_Store
-/public/build/*.hot
+/public/build/*.hot*
+/public/build/*.map
 
 # Ignore node packages
 /node_modules
