--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 npm-debug.log
 static/tmp*
 .DS_Store
-/public/build/*.hot*
-/public/build/*.map
+/public/*.hot*
+/public/*.map
 
 # Ignore node packages
 /node_modules
