--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/eessex/events-list#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.16.0",
     "css-loader": "^0.26.1",
@@ -42,7 +44,10 @@
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
