--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongodb": "^2.2.22",
+    "mongoose": "^4.8.5",
+    "mongoose-timestamp": "^0.6.0",
     "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
