--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "events-list",
-  "version": "0.0.1",
-  "description": "react app on mern stack for listing events",
+  "version": "0.1",
+  "description": "asdf",
   "main": "webapp.js",
   "scripts": {
     "start": "node webapp.js",
     "postinstall": "node ./server/deploy.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eessex/events-list.git"
-  },
+  "repository": "git+https://github.com/eessex/events-list.git",
   "keywords": [
     "react"
   ],
@@ -49,6 +46,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
     "redux-promise": "^0.5.3",
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
